--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <title>reyk floeter</title>
-<meta http-equiv="Refresh" content="0; url=http://github.com/reyk/" />
+<meta http-equiv="Refresh" content="0; url=https://reykfloeter.com/" />
 </head>
 <body>
-<p>Redirecting to <a href="http://github.com/reyk/">github.com/reyk</a>...</p>
+<p>Redirecting to <a href="http://reykfloeter.com/">reykfloeter.com</a>...</p>
 </body>
 </html>
